--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </body>
     <body>
         <div class="container">
-            <div class="row">
+            <div class="row" >
                 <div class="nav-menu">
                     <div id="logo">
                         <img src="static/images/logo-11.png" alt="John Jack Lewis"> <!-- update later -->
@@ -44,7 +44,7 @@
                     <div id="john-jack-profile">
                         <!-- <img src="img/john-jack.png" alt=""> -->
                     </div>
-                    <h1><strong>Hi, <br>I'm John Jack</strong></h1>
+                    <h1><strong>I'm John Jack</strong></h1>
                     <p>Hello! I'm <b>John Jack</b>, and I have done stuff.</p>
                     <a href="https://www.linkedin.com/in/johnjacklewis/" class="button">Know more</a>
                     <div id="social">
